[gd_scene load_steps=3 format=3 uid="uid://bbhlsdn0e05ya"]

[ext_resource type="Script" uid="uid://dhx01aw5bncg4" path="res://scenes/game/PlayingButtonsDisplay.gd" id="1_uy1al"]
[ext_resource type="Theme" uid="uid://8p0gerr82ggh" path="res://scenes/choose-name/ButtonTheme.tres" id="2_14gw4"]

[node name="PlayingButtonsDisplay" type="Node2D"]
script = ExtResource("1_uy1al")

[node name="CallVidoButton" type="Button" parent="."]
offset_left = 1.0
offset_top = 3.0
offset_right = 121.0
offset_bottom = 60.0
theme = ExtResource("2_14gw4")
text = "VIDO"

[connection signal="pressed" from="CallVidoButton" to="." method="_on_call_vido_button_pressed"]
